[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "polymarket-agents"
version = "0.1.0"
description = "Autonomous agents for trading on Polymarket prediction markets"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "agents contributors" }
]
keywords = ["polymarket", "prediction-markets", "agents", "trading", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "py-clob-client>=0.14.0",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "web3>=6.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

[project.scripts]
polymarket-agents = "agents.main:main"

[project.urls]
Homepage = "https://github.com/your-org/agents"
Repository = "https://github.com/your-org/agents"
Issues = "https://github.com/your-org/agents/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["agents"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# removed --cov-report=xml since I'm just running tests locally
addopts = "--cov=agents --cov-report=term-missing"

[tool.coverage.run]
source = ["agents"]
omit = ["tests/*", "*/__init__.py"]
